# gamma

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker.Makefile
include/lib/: pipeline.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp
src/lib/: pipeline.cpp  utils.cpp
test/: test_pipeline.cpp  test_utils.cpp
